--- a/dot-pr-review/Cargo.toml
+++ b/dot-pr-review/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+clap = "4.5.47"
+octocrab = "0.44.1"
+serde = "1.0.219"
+serde_json = "1.0.143"
