--- a/dot-pr-review/Cargo.toml
+++ b/dot-pr-review/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-clap = "4.5.47"
+clap = "4.5.53"
 octocrab = "0.44.1"
-serde = "1.0.219"
-serde_json = "1.0.143"
+serde = "1.0.228"
+serde_json = "1.0.145"
+tokio = "1.48.0"
