--- a/dot-pr-review/Cargo.toml
+++ b/dot-pr-review/Cargo.toml
@@ -4,8 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-clap = "4.5.53"
+anyhow = "1.0.100"
+chrono = { version = "0.4.42", features = ["serde"] }
+clap = { version = "4.5.53", features = ["derive"] }
 octocrab = "0.44.1"
 serde = "1.0.228"
 serde_json = "1.0.145"
-tokio = "1.48.0"
+tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
