--- a/dot-pr-review/Cargo.toml
+++ b/dot-pr-review/Cargo.toml
@@ -10,4 +10,4 @@ clap = { version = "4.5.53", features = ["derive"] }
 octocrab = "0.44.1"
 serde = "1.0.228"
 serde_json = "1.0.145"
-tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
+tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
